# repo-patrol

./: .eslintrc.json  .gitattributes  .gitignore  .npmignore  .projenrc.ts  API.md  README.md  package.json  pnpm-lock.yaml  tsconfig.dev.json  tsconfig.json
.github/workflows/: build.yml  deploy.yml  release.yml  test.yml  upgrade-main.yml
.projen/: deps.json  files.json  tasks.json
agent/: requirements.txt
cdk/: cdk.json  package.json  tsconfig.json
cdk/lib/: repo-patrol-stack.ts
docs/: security-review-2026-03-15.md
integ/: integ-app.ts
src/: index.ts  repo-patrol.ts  strands-agent-runtime.ts
src/agent-scheduler/: index.ts
src/handlers/: admin-user-seeder.ts  repo-seeder.ts  schedule-cleanup.ts
src/repo-registry/: index.ts
src/report-frontend/: index.ts
test/: integ.repo-patrol.ts  repo-patrol.test.ts
test/integ.repo-patrol.js.snapshot/: integ.json  (+6 more)
test/integ.repo-patrol.js.snapshot/asset.68fbb7092bfabf4a2b3e4cf007227cd32a57d66c1bd024cf5e0ae91715325389/: pyproject.toml
test/integ.repo-patrol.js.snapshot/asset.68fbb7092bfabf4a2b3e4cf007227cd32a57d66c1bd024cf5e0ae91715325389/src/: main.py
test/integ.repo-patrol.js.snapshot/asset.68fbb7092bfabf4a2b3e4cf007227cd32a57d66c1bd024cf5e0ae91715325389/src/agents/: patrol_agent.py
test/integ.repo-patrol.js.snapshot/asset.68fbb7092bfabf4a2b3e4cf007227cd32a57d66c1bd024cf5e0ae91715325389/src/config/: prompts.py  settings.py
test/integ.repo-patrol.js.snapshot/asset.68fbb7092bfabf4a2b3e4cf007227cd32a57d66c1bd024cf5e0ae91715325389/src/tools/: github_tools.py  health_tools.py
webapp/: package.json
(+101 files in other folders)
